--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -1,6 +1,8 @@
 ---
 deployment:
   tasks:
-    - export DEPLOYPATH=/home/akkefkao/public_html/
+    - export DEPLOYPATH=/home/akkefkao/public_html
+    - /bin/rm -rf $DEPLOYPATH/*
     - /bin/cp -R out/* $DEPLOYPATH
-    - /bin/cp -R public/* $DEPLOYPATH 
+    - /bin/cp -R public/* $DEPLOYPATH/public
+    - /bin/cp .htaccess $DEPLOYPATH/.htaccess 
