Fix directory listing and deployment configuration

--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,6 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/akkefkao/public_html
-    - /bin/cp -R * $DEPLOYPATH/ 
+    - /bin/rm -rf $DEPLOYPATH/*
+    - /bin/cp -R out/* $DEPLOYPATH/
+    - /bin/cp .htaccess $DEPLOYPATH/.htaccess 
