--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
+# Disable directory listing
+Options -Indexes
+
+# Set default index files
+DirectoryIndex index.html index.htm
+
+# Enable rewrite engine
 RewriteEngine On
 RewriteBase /
 
