--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,9 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/akkefkao/public_html
-    - /bin/rm -rf $DEPLOYPATH/*
-    - /bin/mkdir -p $DEPLOYPATH
-    - /bin/cp -R out/. $DEPLOYPATH/
-    - /bin/cp .htaccess $DEPLOYPATH/.htaccess
-    - /bin/chmod 644 $DEPLOYPATH/.htaccess
-    - /bin/chmod 755 $DEPLOYPATH 
+    - /bin/cp -R * $DEPLOYPATH/ 
