--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,9 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/akkefkao/public_html
-    - /bin/cp -R * $DEPLOYPATH/ 
+    - /bin/cp -R .next $DEPLOYPATH/
+    - /bin/cp -R public/* $DEPLOYPATH/
+    - /bin/cp -R .htaccess $DEPLOYPATH/
+    - /bin/cp package.json $DEPLOYPATH/
+    - /bin/cp package-lock.json $DEPLOYPATH/
+    - /bin/cp next.config.js $DEPLOYPATH/ 
