--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ Options -Indexes -MultiViews
 Options +FollowSymLinks
 
 # Set default index files
-DirectoryIndex index.html index.htm
+DirectoryIndex index.html
 
 # Enable rewrite engine
 RewriteEngine On
@@ -13,10 +13,12 @@ RewriteBase /
 RewriteCond %{HTTPS} off
 RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 
-# Handle Next.js client-side routing
+# Handle Next.js routing
+RewriteCond %{REQUEST_URI} !^/_next/
+RewriteCond %{REQUEST_URI} !^/static/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^([^.]+)$ $1.html [L]
+RewriteRule ^(.*)$ /_next/server/pages/$1.html [L]
 
 # Error handling
 ErrorDocument 404 /404.html
