--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.57.0",
     "react-hot-toast": "^2.5.2",
+    "sharp": "^0.34.5",
     "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
