--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^6.9.0",
     "clsx": "^2.1.0",
-    "next": "14.0.4",
+    "next": "^14.2.18",
     "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
@@ -31,7 +31,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.2.18",
     "postcss": "^8.4.32",
     "postcss-import": "^15.1.0",
     "postcss-nesting": "^12.0.1",
